spelling correction lol

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 	    <nav class="collapse navbar-collapse bs-navbar-collapse navbar-right" role="navigation">
 	      <ul class="nav navbar-nav">
 	        <li>
-	          <a href="#face">Calender</a>
+	          <a href="#face">Calendar</a>
 	        </li>
 	        <li>
 	          <a href="#features">Information</a>
