Rename and quick layout fixes to login

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			  <a href="#personal">Preferences</a>
 			</li>
 			<li>
-			  <a href="#signout">Signout</a>
+			  <a href="login.html">Signout</a>
 			</li>
 		  </ul>
 		</nav>
@@ -181,10 +181,5 @@
 		});
 
 	</script>	
-	
-	
-	<!-- ********************* -->
-	<!-- Start Rocket -->
-	
 	</body>
 </html>
