Re-commit index

--- a/login.html
+++ b/login.html
@@ -53,16 +53,16 @@
 
             <div id="header"></div>
             <div id="body"></div>
-            <center><h1 class="titleLogo">Post<span>Club</span></h1></center>
-            <center><h1 class="titlePhrase">Let's Meet Up?</h1></center>
-            <center><p class="titleTag">Pick a date | Make plans | Live life</p>
-            <br>
-         <div class="fb-login-button" data-max-rows="1" data-size="xlarge" data-show-faces="false" data-auto-logout-link="false"></div>
+            <center><h1 class="titleLogo">Post<span>Club</span></h1>
+            <h1 class="titlePhrase">Let's Meet Up?</h1>
+            	<p class="titleTag">Pick a date | Make plans | Live life</p>
+            	<br>
+         		<div class="fb-login-button" data-max-rows="1" data-size="xlarge" data-show-faces="false" data-auto-logout-link="false"></div>
 
             </center>
 
         <div id="footer">   
-                <center><p class="loginFoot">Created by <strong>Jae</strong>, <strong>Bryce</strong> and <strong>Michael</strong></p></center>
-            </div>
+            <center><p class="loginFoot">Created by <strong>Jae</strong>, <strong>Bryce</strong> and <strong>Michael</strong></p></center>
+        </div>
     </body>
 </html>
