--- a/index.html
+++ b/index.html
@@ -98,18 +98,18 @@
 	<!-- ================================================== 
 	End Hero -->
 	<!-- Start Hero 2 Section
-	=======================================================-->
+	=======================================================
 	<section id="features" class="section" style="background-color:#FFF; border-top: 1px solid rgba(0, 0, 0, .1);">
 		<div class="container-fluid">
 			<div class="row">
 				<div class="banner2">
 					<div class="col-md-12 col-sm-12 col-xs-12">
 						<div class="Hero2">
-							<img src="assets\images\golf.jpg">-->
+							<img src="assets\images\golf.jpg">
 						</div>
 						<div class="col-md-12 col-sm-12 col-xs-12">
 							<div class="preback">
-								<h1 class="infoTitle">Meet <span>New</span> Friends</h1>-->
+								<h1 class="infoTitle">Meet <span>New</span> Friends</h1>>
 							</div>
 						</div>								
 					</div>	
@@ -131,17 +131,6 @@
 	</section>
 	<!-- ==================================================
 	End Hero 2 -->
-	
-	<!-- Bootstrap core JavaScript
-	================================================== -->
-	<!-- Placed at the end of the document so the pages load faster -->
-	<script src="assets/js/bootstrap.js"></script>
-	<script src="assets/js/waypoints.min.js"></script>
-	<script src="assets/js/jquery.scrollto.min.js"></script>
-	<script src="assets/js/jquery.localscroll.min.js"></script>
-	<script src="assets/js/jquery.prettyPhoto.js"></script>
-	<script src="assets/js/scripts.js"></script>
-
 	<script>
 		$(document).ready(function() {
 			
@@ -190,5 +179,15 @@
 
   </div>
 </div>
+	<!-- Bootstrap core JavaScript
+	================================================== -->
+	<!-- Placed at the end of the document so the pages load faster -->
+	<script src="assets/js/bootstrap.js"></script>
+	<script src="assets/js/waypoints.min.js"></script>
+	<script src="assets/js/jquery.scrollto.min.js"></script>
+	<script src="assets/js/jquery.localscroll.min.js"></script>
+	<script src="assets/js/jquery.prettyPhoto.js"></script>
+	<script src="assets/js/scripts.js"></script>
+
 	</body>
 </html>
