Link to profile

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			  <a href="#features">Information</a>
 			</li>
 			<li>
-			  <a href="#personal">Preferences</a>
+			  <a href="profile.html">Preferences</a>
 			</li>
 			<li>
 			  <a href="login.html">Signout</a>
@@ -136,7 +136,7 @@
 			
 			$('#calendar').fullCalendar({
 				header: {
-					left: 'prev',
+					left: '',
 					center: 'title',
 					right: 'next'
 				},
