--- a/indexQueue.html
+++ b/indexQueue.html
@@ -96,6 +96,7 @@
                 <div class="col-md-6 col-sm-12 col-xs-12">
                     <div class="lobby">
                         <h1 class="lobbyTitle">Event Room</h1>
+                        <h2 class="lobbyStatus">Looking for<span> 7 </span> more people...</h2>
                     </div>
                 </div>
 				<div class="col-md-6 col-sm-12 col-xs-12">
