--- a/indexQueue.html
+++ b/indexQueue.html
@@ -95,8 +95,12 @@
 			<div class="row">
                 <div class="col-md-6 col-sm-12 col-xs-12">
                     <div class="lobby">
-                        <h1 class="lobbyTitle">Event Room</h1>
+                        <h1 class="lobbyTitle">Event Queue</h1>
                         <h2 class="lobbyStatus">Looking for<span> 7 </span> more people...</h2>
+                        <h2 class="lobbyD1">Date: <br/><span>March 13th</span></h2>
+                        <h2 class="lobbyD">Event Time: <br/><span>3:00 - 7:00</span></h2>
+                        <h2 class="lobbyD">Category: <br/></h2>
+                        <center><img class="activeLogo" src="assets/images/Active%20Logo.png"></center>
                     </div>
                 </div>
 				<div class="col-md-6 col-sm-12 col-xs-12">
