--- a/indexQueue.html
+++ b/indexQueue.html
@@ -96,11 +96,11 @@
                 <div class="col-md-6 col-sm-12 col-xs-12">
                     <div class="lobby">
                         <h1 class="lobbyTitle">Event Queue</h1>
-                        <h2 class="lobbyStatus">Looking for<span> 7 </span> more people...</h2>
                         <h2 class="lobbyD1">Date: <br/><span>March 13th</span></h2>
                         <h2 class="lobbyD">Event Time: <br/><span>3:00 - 7:00</span></h2>
-                        <h2 class="lobbyD">Category: <br/></h2>
-                        <center><img class="activeLogo" src="assets/images/Active%20Logo.png"></center>
+                        <h2 class="lobbyD">Distance: <br/><span>5km</span></h2>
+                        <h2 class="lobbyD">Category: <br/><span>Outdoor - Active</span></h2>
+                        <h2 class="lobbyStatus">Looking for<span> 7 </span> more people...</h2>
                     </div>
                 </div>
 				<div class="col-md-6 col-sm-12 col-xs-12">
