--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 			
 			$('#calendar').fullCalendar({
 				header: {
-					left: '',
+					left: 'prev',
 					center: 'title',
 					right: 'next'
 				},
