--- a/indexQueue.html
+++ b/indexQueue.html
@@ -162,7 +162,7 @@
 			
 			$('#calendar').fullCalendar({
 				header: {
-					left: '',
+					left: 'prev',
 					center: 'title',
 					right: 'next'
 				},
