--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					<div class="tab-content">
 					<div class="tab-pane active" id="tab1">
 						<div class="modal-header">
-							Event details
+							<h3>Event details</h3>
 						</div>
 						<div class="modal-body">
 								<label class="">Start time:</label>
@@ -157,15 +157,29 @@
 					</div>
 					<div class="tab-pane" id="tab2">
 						<div class="modal-header">
-							Category selection
+							<h3>Category selection</h3>
 						</div>
 						<div class="modal-body">
-							<p>Howdy, I'm in Section 2.</p>
+							<p>
+								<div align="center">
+								<img src="assets/images/Social Logo.png" width="40%">
+								<img src="assets/images/Active Logo.png" width="40%">
+								</div>
+							</p>
+
+<script>
+$(function () {
+  $("img").click(function() {
+    $(this).css('border', "solid 2px red");  
+  });
+});
+</script>
+
 						</div>
 
 						<div class="modal-footer">
 							<a href="#tab1" data-toggle="tab" class="pull-left btn btn-default">< Prev</a>
-							<a href="#" data-toggle="tab" class="pull-right btn btn-primary">Submit</a>
+							<a href="indexQueue.html" class="pull-right btn btn-primary">Submit</a>
 						</div>
 					</div>
 				</div>
