--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
 		<link rel="shortcut icon" href="../assets/favicon.png">
 	</head>
     <body>
-
+    <div>
     	<div id="fb-root"></div>
 		<script>(function(d, s, id) {
 		  var js, fjs = d.getElementsByTagName(s)[0];
@@ -57,10 +57,13 @@
             <h1 class="titlePhrase">Let's Meet Up?</h1>
             	<p class="titleTag">Pick a date | Make plans | Live life</p>
             	<br>
+         		<!--
          		<div class="fb-login-button" data-max-rows="1" data-size="xlarge" data-show-faces="false" data-auto-logout-link="false"></div>
-
+				-->
+				<a href="index.html"> <img src="assets/images/facebook-login-blue.png"> </a>
             </center>
-
+            <br>
+        </div>    
         <div id="footer">   
             <center><p class="loginFoot">Created by <strong>Jae</strong>, <strong>Bryce</strong> and <strong>Michael</strong></p></center>
         </div>
