--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
          		<!--
          		<div class="fb-login-button" data-max-rows="1" data-size="xlarge" data-show-faces="false" data-auto-logout-link="false"></div>
 				-->
-				<a href="index.html"> <img src="assets/images/facebook-login-blue.png"> </a>
+				<a href="index.php"> <img src="assets/images/facebook-login-blue.png"> </a>
             </center>
             <br>
         </div>    
